--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,9 +1,10 @@
 table {
     border-collapse: separate;
     border-spacing: 0;
-    max-width: 100%;
+    overflow-x: scroll !important;
     width: 100%;
-    border: 1px solid #E3E3E3;
+    white-space: nowrap;
+    border: 1px solid #E3E3E3 !important;
     border-radius: 3px;
     margin-bottom: 10px; 
 }
@@ -15,17 +16,17 @@ background-color: #F1F1F1;
 
 th,
 td {
-border: none !important;
-border-bottom: 1px solid #e1e4e5 !important;
-padding: 5px;
-line-height: inherit;
+    width: auto !important;
+    border: none !important;
+    border-bottom: 1px solid #e1e4e5 !important;
+    padding: 5px;
+    line-height: inherit;
 }
+
 
 table tr:last-child td {
     border-bottom: 0px !important;
 }
-
-
 
 td { vertical-align: top }
 
